--- a/SCM/contest/MDK-ARM/contest/contest.build_log.htm
+++ b/SCM/contest/MDK-ARM/contest/contest.build_log.htm
@@ -22,12 +22,58 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 D:\contest\contest\SCM\contest\MDK-ARM\contest.uvprojx
-Project File Date:  06/30/2025
+Project File Date:  07/01/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil\ARM\ARM_Compiler_5.06u7\Bin'
 Build target 'contest'
-"contest\contest.axf" - 0 Error(s), 0 Warning(s).
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_timebase_tim.c...
+compiling gpio.c...
+compiling stm32f1xx_hal.c...
+compiling usart.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling dma.c...
+compiling stm32f1xx_it.c...
+compiling tim.c...
+compiling i2c.c...
+compiling main.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_i2c.c...
+compiling list.c...
+compiling croutine.c...
+compiling event_groups.c...
+compiling queue.c...
+compiling stream_buffer.c...
+compiling timers.c...
+compiling tasks.c...
+compiling heap_4.c...
+compiling port.c...
+compiling pid.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_uart.c...
+compiling filter.c...
+compiling stm32f1xx_hal_tim.c...
+compiling servo.c...
+..\Hardware\servo.c(65): warning:  #1-D: last line of file ends without a newline
+  }
+..\Hardware\servo.c: 1 warning, 0 errors
+compiling oled.c...
+compiling mymain.c...
+compiling mpu6050.c...
+linking...
+Program Size: Code=23288 RO-data=2768 RW-data=184 ZI-data=13216  
+FromELF: creating hex file...
+"contest\contest.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -51,7 +97,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
